/**
 * Copyright 2019, SumUp Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import React from 'react';

import Selector from '.';

describe('Selector', () => {
  it('should render a default selector appropriately', () => {
    const actual = create(<Selector />);
    expect(actual).toMatchSnapshot();
  });
  it('should render a disabled selector appropriately', () => {
    const actual = create(<Selector disabled />);
    expect(actual).toMatchSnapshot();
  });
  it('should render a selected selector appropriately', () => {
    const actual = create(<Selector selected />);
    expect(actual).toMatchSnapshot();
  });
});
