// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a default selector appropriately 1`] = `
<Selector
  disabled={false}
  selected={false}
/>
`;

exports[`Selector should render a disabled selector appropriately 1`] = `
<Selector
  disabled={true}
  selected={false}
/>
`;

exports[`Selector should render a selected selector appropriately 1`] = `
<Selector
  disabled={false}
  selected={true}
/>
`;
